compiler/acton/test/syntaxerrors/err8.act
def f(x):
    y = 2
     z = x+y
    return z
